--- a/src/app/admin/directories/directories.component.css
+++ b/src/app/admin/directories/directories.component.css
@@ -16,6 +16,7 @@ section {
   border-radius: 5px;
   background-color: #ffffff;
   padding-top: 3rem;
+  text-align: center;
 }
 
 .table-container h2 {
@@ -27,6 +28,7 @@ section {
 .search-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center; /* Center align items */
   margin-bottom: 20px;
   padding-top: 2rem;
 }
@@ -61,6 +63,7 @@ section {
   border-radius: 10px;
   border: none;
   width: 10rem;
+  height: 4rem;
   background-color: #00cc66;
   color: white;
   font-size: 16px;
@@ -75,7 +78,7 @@ table {
 table th,
 table td {
   padding: 10px;
-  text-align: left;
+  text-align: center; /* Center align table elements */
   border-bottom: 1px solid #ddd;
 }
 
@@ -90,12 +93,14 @@ table td button {
   border-radius: 4px;
   cursor: pointer;
 }
+
 .actions-button {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
 }
+
 table td button img {
   width: 16px;
   height: 16px;
@@ -105,16 +110,20 @@ table td button:hover {
   background-color: #ddd;
 }
 
+/* Modal Styles */
 .modal {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  padding: 20px;
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  width: 30rem;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 .modal::backdrop {
@@ -127,3 +136,59 @@ table td button:hover {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
 }
+
+.modal h3 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+}
+
+.modal label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.modal input,
+.modal textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.modal textarea.limited-textarea {
+  max-height: 150px;
+  resize: vertical;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2rem;
+}
+
+.modal-buttons button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.modal-buttons button:first-child {
+  background-color: #00cc66;
+  color: white;
+}
+
+.modal-buttons button:last-child {
+  background-color: #ccc;
+}
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+
