--- a/src/app/home/home-new/home-new.component.html
+++ b/src/app/home/home-new/home-new.component.html
@@ -11,9 +11,9 @@
           <div class="news-card">
             <h3>{{ news.title }}</h3>
             <img [src]="news.image" [alt]="news.title" />
-            <p>{{ news.description }}</p>
+            <!--<p>{{ news.description }}</p>-->
             <div class="date">{{ news.date }}</div>
-            <button>Leer Más</button>
+            <a [href]="news.link" target="_blank" class="read-more-button">Leer Más</a>
           </div>
         </div>
         }
