--- a/src/app/admin/news/news.component.css
+++ b/src/app/admin/news/news.component.css
@@ -72,11 +72,19 @@ table {
   border-collapse: collapse;
 }
 
-table th,
-table td {
+table th {
   padding: 10px;
   justify-content: center;
   border-bottom: 1px solid #ddd;
+  
+}
+
+table td {
+  padding: 10px;
+}
+
+.actions-button{
+  padding-top: 1rem;
 }
 
 
@@ -91,6 +99,7 @@ table td button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  
 }
 
 .actions-button {
@@ -108,8 +117,11 @@ table td button img {
 table td button:hover {
   background-color: #ddd;
 }
-
+.img-modal{
+  cursor: pointer;
+}
 .modal {
+  min-width: 50rem;
   position: fixed;
   top: 50%;
   left: 50%;
