--- a/src/app/home/home-new/home-new.component.css
+++ b/src/app/home/home-new/home-new.component.css
@@ -2,7 +2,7 @@ section {
   min-height: 75rem;
   height: auto;
   margin: 2rem 0;
-  padding: 0 2rem; /* Espaciado desde los bordes */
+  padding: 0 2rem; 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,14 +18,13 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   color: #939292;
-  font-size: 3rem;
+  font-size: 2rem;
   padding: 0 3%;
 }
 
 .img-carousel {
   width: 100%;
   position: relative;
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,10 +47,12 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .news-card {
-  height: 100%; /* Asegura que todas las tarjetas tengan la misma altura */
+  height: 100%; 
+  width: 100%;
   background: #fff;
   border-radius: 8px;
   padding: 1rem;
@@ -71,11 +72,11 @@ section {
 
 .news-card img {
   width: 100%;
-  max-width: 300px; /* Limita el ancho máximo de la imagen */
+  max-width: 300px;
   height: auto;
   border-radius: 4px;
   margin: 0.5rem 0;
-  object-fit: cover; /* Asegura que la imagen se recorte adecuadamente */
+  object-fit: cover; 
 }
 
 .news-card .date {
