feat: Add modal to display images in full size on click in HomeActionsComponent
- Added methods to open and close the image modal in HomeActionsComponent
- Updated the HTML template to include the modal structure
- Applied CSS styles to ensure the modal displays correctly and is responsive

--- a/src/app/home/home-actions/home-actions.component.html
+++ b/src/app/home/home-actions/home-actions.component.html
@@ -7,10 +7,21 @@
     <div class="carousel" [style.transform]="getTransform()">
       @for (image of images; track image.id) {
       <div class="carousel-item">
-        <img [src]="image.src" [alt]="image.id" />
+        <img [src]="image.src" [alt]="image.id"  (click)="openImageModal(image.src)"/>
       </div>
       }
     </div> 
     <button class="next" (click)="nextSlide()">❯</button>
   </div>
+
+  <!-- Modal de Imagen 
+   @if (isModalOpen) {
+    <div class="modal" (click)="closeImageModal()">
+      <div class="modal-content" (click)="$event.stopPropagation()">
+        <span class="close" (click)="closeImageModal()">&times;</span>
+        <img [src]="currentImageSrc" alt="Imagen Grande" class="modal-image">
+      </div>
+    </div>
+   }-->
+  
 </section>
