--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,8 +3,8 @@
     <img src="../../assets/img/escudo1.gif" alt="Logo de la municipalidad de Golfito">
   </div>
   <section>
-    
-    <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
+
+    <span routerLink='/' routerLinkActive='active'>Inicio</span>
     <span routerLink='/cce' routerLinkActive='active'>Comités Comunales</span>
     <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
     <span routerLink='/directorio' routerLinkActive='active'>Comité Municipal</span>
