--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -5,7 +5,7 @@
     </div>
     <form class="form"  [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <h2>Crear Nueva Cuenta</h2>
-      
+
       <div class="form-group">
         <label for="correo">Correo</label>
         <input
@@ -30,6 +30,7 @@
       </div>
       <button type="submit" [disabled]="!loginForm.valid">Ingresar</button>
       <a href="#" class="forgot-password">¿Se te olvidó la contraseña?</a>
+      <a routerLink="/admin/signup" class="forgot-password">Registrese aquí</a>
     </form>
   </div>
 </div>
