--- a/src/app/admin/signup/signup.component.html
+++ b/src/app/admin/signup/signup.component.html
@@ -1,10 +1,10 @@
 <div class="registro-container">
   <div class="registro-form">
     <div class="escudo">
-        <img src="../../../assets/img/Login/Login.png" alt="Escudo"  />
+      <img src="../../../assets/img/Login/Login.png" alt="Escudo" />
     </div>
-    <form class="form"  (ngSubmit)="onSubmit()">
-        <h2>Crear Nueva Cuenta</h2>
+    <form class="form" [formGroup]="registroForm" (ngSubmit)="onSubmit()">
+      <h2>Crear Nueva Cuenta</h2>
       <div class="form-group">
         <label for="nombre">Nombre</label>
         <input
