--- a/src/app/admin/directories/directories.component.html
+++ b/src/app/admin/directories/directories.component.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="modal-buttons">
-          <button type="submit" [disabled]="directoryForm.invalid">
+          <button type="submit">
             {{ isEditing ? "Actualizar" : "Registrar" }}
           </button>
           <button type="button" (click)="closeModal()">Cancelar</button>
