--- a/src/app/directory/directory-data/directory-data.component.html
+++ b/src/app/directory/directory-data/directory-data.component.html
@@ -1,5 +1,7 @@
+@if (tables?.length>0) {
 <div class="directory-container">
-  <h1>Comité ejecutivo</h1>
+  @for (item of tables;track item) {
+  <h1>{{ item.name }}</h1>
   <div>
     <table>
       <thead>
@@ -11,113 +13,18 @@
         </tr>
       </thead>
       <tbody>
-        @for (person of Comite; track person){
+        @for (directory of item.items;track directory){
         <tr>
-          <td>{{ person.name }}</td>
-          <td>{{ person.job }}</td>
-          <td>{{ person.institution }}</td>
-          <td>{{ person.mail }}</td>
+          <td>{{ directory.name }}</td>
+          <td>{{ directory.job }}</td>
+          <td>{{ directory.institution }}</td>
+          <td>{{ directory.mail }}</td>
         </tr>
         }
       </tbody>
     </table>
   </div>
   <span></span>
-  <h1>Mesa de primera respuesta</h1>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Cargo</th>
-          <th>Institución</th>
-          <th>Correo</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (person of MesaPrimeraRespuesta; track person){
-        <tr>
-          <td>{{ person.name }}</td>
-          <td>{{ person.job }}</td>
-          <td>{{ person.institution }}</td>
-          <td>{{ person.mail }}</td>
-        </tr>
-        }
-      </tbody>
-    </table>
-  </div>
-  <span></span>
-  <h1>Mesa de Salud, Agua y Saneamiento</h1>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Cargo</th>
-          <th>Institución</th>
-          <th>Correo</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (person of MesaSaludAguaSanamiento; track person){
-        <tr>
-          <td>{{ person.name }}</td>
-          <td>{{ person.job }}</td>
-          <td>{{ person.institution }}</td>
-          <td>{{ person.mail }}</td>
-        </tr>
-        }
-      </tbody>
-    </table>
-  </div>
-
-  <span></span>
-  <h1>Mesa de Infraestructura y Servicios</h1>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Cargo</th>
-          <th>Institución</th>
-          <th>Correo</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (person of MesaInfraServicios; track person){
-        <tr>
-          <td>{{ person.name }}</td>
-          <td>{{ person.job }}</td>
-          <td>{{ person.institution }}</td>
-          <td>{{ person.mail }}</td>
-        </tr>
-        }
-      </tbody>
-    </table>
-  </div>
-
-  <span></span>
-  <h1>Mesa Social y Protección Humanitaria</h1>
-  <div>
-    <table>
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Cargo</th>
-          <th>Institución</th>
-          <th>Correo</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (person of MesaSocialProHumanitaria; track person){
-        <tr>
-          <td>{{ person.name }}</td>
-          <td>{{ person.job }}</td>
-          <td>{{ person.institution }}</td>
-          <td>{{ person.mail }}</td>
-        </tr>
-        }
-      </tbody>
-    </table>
-  </div>
+  }
 </div>
+}
